--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   </style>
 </head>
 <body>
-  <h1>/fetch?url=ツール</h1>
+  <h1>通信プロキシ</h1>
   <input id="urlInput" type="text" placeholder="URLを入力" size="40" />
   <button onclick="fetchURL()">取得</button>
 
